# suna-enhanced

./: IMPLEMENTATION_SUMMARY.md  PHASE3_IMPLEMENTATION_SUMMARY.md  PHASE4_IMPLEMENTATION_SUMMARY.md  PHASE5_IMPLEMENTATION_SUMMARY.md  PHASE8B_SUMMARY.md  README.md
.github/workflows/: deploy  deploy-pages.yml  docker-build.yml  nextjss.yml
backend/: PHASE7_IMPLEMENTATION.md  api.py
backend/debugger/: __init__.py  api.py  breakpoints.py  execution_graph.py  explainer.py  inspector.py  models.py  step_debugger.py  time_travel.py
backend/enterprise/: ARCHITECTURE.md  README.md  __init__.py  api.py  api_keys.py  audit_log.py  invitations.py  models.py  permissions.py  rbac.py  teams.py  usage_tracking.py  workspaces.py
backend/llm/: __init__.py  anthropic_provider.py  config.py  hybrid.py  ollama.py  openai_provider.py  provider.py
backend/multi_agent/: README.md  __init__.py  agent_registry.py  agent_spawner.py  api.py  collaboration_api.py  collaboration_modes.py  communication_bus.py  consensus_engine.py  critique.py  debate.py  ensemble.py  load_balancer.py  models.py  orchestrator.py  pipeline.py  swarm.py  task_decomposer.py
backend/multimodal/: __init__.py  audio_processor.py  document_parser.py  models.py  vision.py
backend/proactive/: README.md  __init__.py  api.py  models.py  monitor.py  scheduler.py  suggestions.py  triggers.py  webhooks.py  worker.py
backend/reasoning/: __init__.py  chain_of_thought.py  feedback_loop.py  models.py  prompt_optimizer.py  react_loop.py  self_reflection.py  tree_of_thoughts.py
backend/scheduler/: __init__.py  api.py  background_executor.py  models.py  notification_service.py  task_scheduler.py
backend/tests/: __init__.py  conftest.py  test_llm_providers.py  test_multimodal.py  test_reasoning.py  test_scheduler.py  test_tools_base.py
backend/tools/: README.md  __init__.py  base.py  exceptions.py  registry.py  result.py
deploy/: README.md
deploy/docker/: .env.example  README.md  docker-compose.dev.yml  docker-compose.prod.yml
deploy/kubernetes/: README.md  configmap.yaml  ingress.yaml  namespace.yaml  secrets.yaml
deploy/scripts/: backup.sh  deploy.sh  health-check.sh  restore.sh  (+1 more)
docs/: GITHUB_PAGES_DEPLOYMENT.md  SELF_HOSTING_GUIDE.md  SUNA_ULTRA_FEATURES.md
frontend/: .env.production  PHASE8B_IMPLEMENTATION.md  next.config.ts  package-lock.json  package.json
sdk/: GETTING_STARTED.md
sdk/cli/: README.md  pyproject.toml
sdk/cli/suna_cli/: __init__.py  auth.py  config.py  main.py  output.py
sdk/cli/suna_cli/commands/: __init__.py  agent.py  config_cmd.py  logs.py  task.py  tool.py  workflow.py
sdk/cli/tests/: test_cli.py
sdk/python/: LICENSE  README.md  example_usage.py  pyproject.toml
sdk/python/suna_ultra/: __init__.py  agents.py  async_client.py  auth.py  client.py  exceptions.py  models.py  streaming.py  tasks.py  tools.py  workflows.py
sdk/python/tests/: conftest.py  test_agents.py  test_client.py
(+140 files in other folders)
