[project]
name = "suna-ultra"
version = "0.1.0"
description = "Python SDK for Suna Ultra AI Agent Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Suna Team", email = "support@suna.so"}
]
keywords = ["ai", "agents", "suna", "automation", "sdk"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "httpx>=0.25",
    "pydantic>=2.0",
    "sseclient-py>=1.8",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-httpx>=0.22",
    "pytest-cov>=4.1",
]

[project.urls]
Homepage = "https://suna.so"
Documentation = "https://docs.suna.so"
Repository = "https://github.com/kortix-ai/suna"
Issues = "https://github.com/kortix-ai/suna/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["suna_ultra"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
